Update pnpm-lock.yaml with @supabase/supabase-js

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     ]
   },
   "scripts": {
-  "dev": "vite",
-  "build": "pnpm build:client && pnpm build:server",
-  "build:client": "vite build",
-  "build:server": "vite build --config vite.config.server.ts",
-  "start": "node dist/server/node-build.mjs",
-  "test": "vitest --run",
-  "format.fix": "prettier --write .",
-  "typecheck": "tsc"
+    "dev": "vite",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build",
+    "build:server": "vite build --config vite.config.server.ts",
+    "start": "node dist/server/node-build.mjs",
+    "test": "vitest --run",
+    "format.fix": "prettier --write .",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.10",
